# quantecarlo

./: CLAUDE.md  README.md  TECH_DEBT.md  demo.py  pyproject.toml
demos/: demo.py  demo7.py  demo7_categorical_vs_embedding.py  demo7_pca_vs_pls.py  demo9.py  demo_latency_test.py
quantecarlo/: __init__.py  _fantasize.py  _modal_api.py  bo_sampler.py  bo_sampler_multigroup.py  qEI.py
tests/: test_bo_sampler.py  test_fantasize.py  test_modal_live.py
