[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quantecarlo"
version = "0.1.0"
description = "Batch Bayesian optimization sampler (q-EI) for Optuna, backed by a remote GP service"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["optuna>=3.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
